Worked for home page, Build issue resolved, menu aligned

--- a/lite/app/pages/hello-ionic/hello-ionic.scss
+++ b/lite/app/pages/hello-ionic/hello-ionic.scss
@@ -338,9 +338,9 @@
     }
     .home-page-container {
       float: left;
-      width:90%;
-      height: 94%;
-      margin: -172% 5% 5% 5%;
+      width:88%;
+      height: 90%;
+      margin: -152% 5% 5% 5%;
 
         .home-page-main-title {
           width: 100%;
@@ -533,7 +533,7 @@
               font-weight: bold;
               text-transform: uppercase;
               font-size: 15px;
-              margin: 72% 0% 0% 6%;
+              margin: 60% 0% 0% 6%;
             }
           }
 
@@ -554,7 +554,7 @@
                 font-weight: bold;
                 transform: rotate(90deg);
                 text-transform: uppercase;
-                margin: 100% -25% 0% 0%;
+                margin: 78% -25% 0% 0%;
               }
             }
           }
